Adding default realisation for states

--- a/LAB.6.5/LAB.6.5/LAB.6.5.vcxproj
+++ b/LAB.6.5/LAB.6.5/LAB.6.5.vcxproj
@@ -115,7 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DefState.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DefState.h" />
+    <ClInclude Include="IState.h" />
+    <ClInclude Include="IStateEditable.h" />
+    <ClInclude Include="ITransit.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
